--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,7 @@
 [build]
 builder = "NIXPACKS"
-# Explicitly install backend deps from subdir
-buildCommand = "python -m pip install -r backend/requirements.txt"
-
-[build.env]
-NIXPACKS_PYTHON_VERSION = "3.12"
+buildCommand = "pip install -r backend/requirements.txt"
 
 [deploy]
 # Backend API service
-startCommand = "python -m uvicorn app.main:app --app-dir backend --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn app.main:app --app-dir backend --host 0.0.0.0 --port $PORT"
