Use Dockerfile for Railway backend

--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,2 @@
 [build]
-builder = "NIXPACKS"
-buildCommand = "pip install -r backend/requirements.txt"
-
-[deploy]
-# Backend API service
-startCommand = "uvicorn app.main:app --app-dir backend --host 0.0.0.0 --port $PORT"
+builder = "DOCKERFILE"
