Fix frontend serve port handling

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,4 +9,6 @@ COPY . .
 RUN npm run build
 
 EXPOSE 3000
-CMD ["sh", "-c", "npx serve -s dist -l ${PORT:-3000}"]
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+CMD ["/app/entrypoint.sh"]
