--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,8 @@ RUN npm run build
 FROM nginx:1.27-alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.default.conf.template /etc/nginx/templates/default.conf.template
 
-EXPOSE 80
+EXPOSE 8080
 
 CMD ["nginx", "-g", "daemon off;"]
